Removed unnecessary routing for availability, now just routes to staff/availability

--- a/WebScheduler/Views/Staff/Index.cshtml
+++ b/WebScheduler/Views/Staff/Index.cshtml
@@ -2,4 +2,4 @@
 
 <h1>Staff</h1>
 
-<a asp-controller="staff" asp-action="availability" asp-route-userName="@User.Identity.Name">Edit Availability</a>
+<a asp-controller="staff" asp-action="availability">Edit Availability</a>
