RequestOff view built

--- a/WebScheduler/Views/Staff/Index.cshtml
+++ b/WebScheduler/Views/Staff/Index.cshtml
@@ -3,3 +3,4 @@
 <h1>Staff</h1>
 
 <a asp-controller="staff" asp-action="availability">Edit Availability</a>
+<a asp-controller="staff" asp-action="requestoff">Request Off</a>
