RequestOff feature added

--- a/WebScheduler/Views/Staff/RequestOff.cshtml
+++ b/WebScheduler/Views/Staff/RequestOff.cshtml
@@ -20,7 +20,7 @@
         @foreach (RequestOff requestOff in ViewBag.requestsOff)
         {
             <tr>
-                <td>@requestOff.Date.DayOfWeek @requestOff.Date.Date</td>
+                <td>@requestOff.Date.DayOfWeek @requestOff.Date.</td>
                 <td>@requestOff.StartTime</td>
                 <td>@requestOff.EndTime</td>
                 <td>@requestOff.Notes</td>
