View Availability for Admin

--- a/WebScheduler/Views/Admin/Index.cshtml
+++ b/WebScheduler/Views/Admin/Index.cshtml
@@ -2,4 +2,7 @@
 
 <h1>Store Manager</h1>
 
-<p></p>
+@*Create Schedule*@
+@*View Current Schedule*@
+<a asp-controller="admin" asp-action="availability">View Staff Availability</a>
+@*Manage Empoyeers*@
