Admin view requests off

--- a/WebScheduler/Views/Admin/Index.cshtml
+++ b/WebScheduler/Views/Admin/Index.cshtml
@@ -5,4 +5,5 @@
 @*Create Schedule*@
 @*View Current Schedule*@
 <a asp-controller="admin" asp-action="availability">View Staff Availability</a>
+<a asp-controller="admin" asp-action="requestsoff">View Requests Off</a>
 @*Manage Empoyeers*@
