Created custom validation for CreateScheduleViewModel

--- a/WebScheduler/Views/Admin/Index.cshtml
+++ b/WebScheduler/Views/Admin/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Store Manager</h1>
 
-@*Create Schedule*@
+<a asp-controller="admin" asp-action="createschedule">Create Schedule</a>
 @*View Current Schedule*@
 <a asp-controller="admin" asp-action="availability">View Staff Availability</a>
 <a asp-controller="admin" asp-action="requestsoff">View Requests Off</a>
