--- a/WebScheduler/Views/Admin/CreateSchedule.cshtml
+++ b/WebScheduler/Views/Admin/CreateSchedule.cshtml
@@ -8,7 +8,7 @@
 
 <form method="post">
     <div class="form-group">
-        <input class="form-control" asp-for="StartDate" type="date" />
+        <input class="form-control" asp-for="StartDate" type="date" value="@DateTime.Now.Date" />
         <span asp-validation-for="StartDate" class="text-danger"></span>
     </div>
     <input type="submit" class="btn" value="Create" />
