--- a/WebScheduler/Views/Admin/EditSchedule.cshtml
+++ b/WebScheduler/Views/Admin/EditSchedule.cshtml
@@ -25,6 +25,12 @@
                 <tr>
                     <td>@user.Name</td>
                     <td>@user.GetShift(DayOfWeek.Sunday, ViewBag.schedule.ID)</td>
+                    <td>@user.GetShift(DayOfWeek.Monday, ViewBag.schedule.ID)</td>
+                    <td>@user.GetShift(DayOfWeek.Tuesday, ViewBag.schedule.ID)</td>
+                    <td>@user.GetShift(DayOfWeek.Wednesday, ViewBag.schedule.ID)</td>
+                    <td>@user.GetShift(DayOfWeek.Thursday, ViewBag.schedule.ID)</td>
+                    <td>@user.GetShift(DayOfWeek.Friday, ViewBag.schedule.ID)</td>
+                    <td>@user.GetShift(DayOfWeek.Saturday, ViewBag.schedule.ID)</td>
                     
                 </tr>
 
@@ -32,5 +38,31 @@
         </tbody>
 
     </table>
+</div>
+
+<div class="container">
+    <label for="form">Add Shift</label>
+    <form method="post">
+        <div class="form-group">
+            <select asp-for="UserId" class="form-control" asp-items="@Model.Users"></select>
+            <span class="danger" asp-validation-for="UserId"></span>
+        </div>
+        <div class="form-group">
+            <select class="form-control" asp-for="Day" asp-items="Html.GetEnumSelectList<DayOfWeek>()"></select>
+            <span class="text-danger" asp-validation-for="Day"></span>
+        </div>
+        <div class="form-group">
+            <input class="form-control" asp-for="StartTime" type="time" min="09:00:00" max="22:00:00" />
+            <span class="text-danger" asp-validation-for="StartTime"></span>
+        </div>
+        <div class="form-group">
+            <input class="form-control" asp-for="EndTime" type="time" min="09:00:00" max="22:00:00" />
+            <span class="text-danger" asp-validation-for="EndTime"></span>
+        </div>
+        <input type="hidden" value="@ViewBag.schedule.ID" />
+        <div class="form-group">
+            <input class="btn" type="submit" value="Add Shift" />
+        </div>
+    </form>
 </div>
 
