--- a/WebScheduler/Views/Admin/Index.cshtml
+++ b/WebScheduler/Views/Admin/Index.cshtml
@@ -8,5 +8,5 @@
     @*View Current Schedule*@
     <a asp-controller="admin" asp-action="availability">View Staff Availability</a>
     <a asp-controller="admin" asp-action="requestsoff">View Requests Off</a>
-    @*Manage Empoyeers*@
+    <a asp-controller="admin" asp-action="managestaff">Manage Staff</a>
 </div>
