--- a/WebScheduler/Views/Admin/Index.cshtml
+++ b/WebScheduler/Views/Admin/Index.cshtml
@@ -2,11 +2,15 @@
 
 <h1>Store Manager</h1>
 
-<div class="nav">
+<div>
     <a asp-controller="admin" asp-action="createschedule">Create Schedule</a>
+    <br />
     <a asp-controller="admin" asp-action="viewschedules">View Schedules</a>
+    <br />
     @*View Current Schedule*@
     <a asp-controller="admin" asp-action="availability">View Staff Availability</a>
+    <br />
     <a asp-controller="admin" asp-action="requestsoff">View Requests Off</a>
+    <br />
     <a asp-controller="admin" asp-action="managestaff">Manage Staff</a>
 </div>
