--- a/WebScheduler/Views/Shared/_LoginPartial.cshtml
+++ b/WebScheduler/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,11 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    ApplicationUser user = await UserManager.FindByNameAsync(User.Identity.Name);
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @user.Name!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
