cleaned up views

--- a/WebScheduler/Views/Admin/Availability.cshtml
+++ b/WebScheduler/Views/Admin/Availability.cshtml
@@ -9,7 +9,7 @@
 {
     
     <table class="table-bordered">
-        <caption>@user.UserName</caption>
+        <caption>@user.Name</caption>
         <tr>
             <th>Day</th>
             <th>Start Time</th>
