--- a/WebScheduler/Views/Admin/RequestsOff.cshtml
+++ b/WebScheduler/Views/Admin/RequestsOff.cshtml
@@ -8,7 +8,7 @@
 @foreach (ApplicationUser user in Model)
 {
     <table class="table-bordered">
-        <caption>@user.UserName</caption>
+        <caption>@user.Name</caption>
         <tr>
             <th>Date</th>
             <th>Start Time</th>
