Converted TimeSpan objects to DateTime with string formatting for 12hr clock display

--- a/WebScheduler/Views/Admin/Availability.cshtml
+++ b/WebScheduler/Views/Admin/Availability.cshtml
@@ -21,8 +21,8 @@
             
             <tr>
                 <td>@availability.Day</td>
-                <td>@availability.StartTime</td>
-                <td>@availability.EndTime</td>
+                <td>@availability.StartTime.ToString("h:mm tt")</td>
+                <td>@availability.EndTime.ToString("h:mm tt")</td>
             </tr>
 
         }
