--- a/WebScheduler/Views/Staff/Availability.cshtml
+++ b/WebScheduler/Views/Staff/Availability.cshtml
@@ -20,8 +20,8 @@ Welcome, @User.Identity.Name!
         {
             <tr>
                 <td>@availability.Day</td>
-                <td>@availability.StartTime</td>
-                <td>@availability.EndTime</td>
+                <td>@availability.StartTime.ToString("h:mm tt")</td>
+                <td>@availability.EndTime.ToString("h:mm tt")</td>
             </tr>
 
         }
