--- a/WebScheduler/Views/Staff/RequestOff.cshtml
+++ b/WebScheduler/Views/Staff/RequestOff.cshtml
@@ -20,9 +20,9 @@
         @foreach (RequestOff requestOff in ViewBag.requestsOff)
         {
             <tr>
-                <td>@requestOff.Date.DayOfWeek @requestOff.Date.</td>
-                <td>@requestOff.StartTime</td>
-                <td>@requestOff.EndTime</td>
+                <td>@requestOff.Date.DayOfWeek @requestOff.Date</td>
+                <td>@requestOff.StartTime.ToString("hh:mm tt")</td>
+                <td>@requestOff.EndTime.ToString("hh:mm tt")</td>
                 <td>@requestOff.Notes</td>
             </tr>         
 
