Added schedule viewing to staff

--- a/WebScheduler/Views/Staff/Index.cshtml
+++ b/WebScheduler/Views/Staff/Index.cshtml
@@ -5,3 +5,5 @@
 <a asp-controller="staff" asp-action="availability">Edit Availability</a>
 <br />
 <a asp-controller="staff" asp-action="requestoff">Request Off</a>
+<br />
+<a asp-controller="staff" asp-action="schedules">Schedules</a>
