--- a/WebScheduler/Views/Admin/ViewSchedules.cshtml
+++ b/WebScheduler/Views/Admin/ViewSchedules.cshtml
@@ -3,10 +3,22 @@
 
 @{ ViewBag.Title = "Schedules";}
 
+<style>
+    .list-group{
+        display:inline-table
+    }
+</style>
 <h1>@ViewBag.Title</h1>
 
-@foreach (Schedule schedule in Model)
-{
-    <a asp-controller ="admin" asp-action="editschedule" asp-route-id="@schedule.ID">@schedule.StartDate.Month/@schedule.StartDate.Day/@schedule.StartDate.Year</a>
-    <br />
-}
+<div class="list-group">
+    @foreach (Schedule schedule in Model)
+    {
+        <div class="form-inline">
+            <form method="get" asp-controller="admin" asp-action="delete" asp-route-id="@schedule.ID">
+                <a class="list-group-item" asp-controller="admin" asp-action="editschedule" asp-route-id="@schedule.ID">@schedule.StartDate.Month/@schedule.StartDate.Day/@schedule.StartDate.Year</a>
+                <input class="btn" type="submit" value="Delete" />
+            </form>
+        </div>
+        <br />
+    }
+</div>
