--- a/WebScheduler/Views/Shared/_Layout.cshtml
+++ b/WebScheduler/Views/Shared/_Layout.cshtml
@@ -70,5 +70,8 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
 </body>
 </html>
