--- a/WebScheduler/Views/Staff/Availability.cshtml
+++ b/WebScheduler/Views/Staff/Availability.cshtml
@@ -35,14 +35,17 @@ Welcome, @User.Identity.Name!
     <div class="form-group">
         <label asp-for="Day"></label>
         <select class="form-control" asp-for="Day" asp-items="Html.GetEnumSelectList<DayOfWeek>()"></select>
+        <span asp-validation-for="Day" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="StartTime"></label>
-        <input class="form-control" asp-for="StartTime" type="time" min="10:00:00" max="22:00:00" />
+        <input class="form-control" asp-for="StartTime" type="time" />
+        <span asp-validation-for="StartTime" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="EndTime"></label>
-        <input class="form-control" asp-for="EndTime" type="time" min="10:00:00" max="22:00:00"/>
+        <input class="form-control" asp-for="EndTime" type="time" />
+        <span asp-validation-for="EndTime" class="text-danger"></span>
     </div>
     <input type="submit" class="btn" />
 </form> 
