--- a/WebScheduler/Views/Admin/EditSchedule.cshtml
+++ b/WebScheduler/Views/Admin/EditSchedule.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebScheduler.Models.AdminViewModels
 @using WebScheduler.Models
-@model AddEditShiftViewModel
+@model AddShiftViewModel
 
 @{ ViewBag.Title = $"Edit Schedule {ViewBag.schedule.ID}";}
 
@@ -47,7 +47,7 @@
     <form method="post">
         <div class="form-group">
             <select asp-for="UserId" class="form-control" asp-items="@Model.Users"></select>
-            <span class="danger" asp-validation-for="UserId"></span>
+            <span class="text-danger" asp-validation-for="UserId"></span>
         </div>
         <div class="form-group">
             <select class="form-control" asp-for="Day" asp-items="Html.GetEnumSelectList<DayOfWeek>()"></select>
@@ -61,7 +61,7 @@
             <input class="form-control" asp-for="EndTime" type="time" min="09:00:00" max="22:00:00" />
             <span class="text-danger" asp-validation-for="EndTime"></span>
         </div>
-        <input type="hidden" value="@ViewBag.schedule.ID" />
+        <input type="hidden" asp-for="ScheduleId" value="@ViewBag.schedule.ID" />
         <div class="form-group">
             <input class="btn" type="submit" value="Add Shift" />
         </div>
