--- a/WebScheduler/Views/Staff/ViewSchedule.cshtml
+++ b/WebScheduler/Views/Staff/ViewSchedule.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebScheduler.Models
 @model Schedule
-@{ ViewBag.Title = $"Viewing Schedule for {Model.StartDate.Month}/{Model.StartDate.Date}/{Model.StartDate.Year}";}
+@{ ViewBag.Title = $"Viewing Schedule for {Model.StartDate.Month}/{Model.StartDate.Day}/{Model.StartDate.Year}";}
 
 <h1>@ViewBag.Title</h1>
 <div class="container">
