Added instructions to Home/Index, refined password requirements

--- a/WebScheduler/Views/Home/Index.cshtml
+++ b/WebScheduler/Views/Home/Index.cshtml
@@ -2,4 +2,7 @@
 
 <h1>Web Scheduler</h1>
 
-<h3>Please log in</h3>
+<h4>To test admin/manager functionality: login with email: admin@admin.com, password: Schedule123!</h4>
+<br />
+<h4>To test staff functionality, register an account/log in</h4>
+
