Updated About page

--- a/WebScheduler/Views/Home/About.cshtml
+++ b/WebScheduler/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>The admin account has the ability to activate and deactivate staff, view staff requests off and availability, and create/edit schedules. Schedules can be marked posted (viewable by staff) or unposted (hidden from staff)</p>
+<br />
+<p>Staff accounts can view posted schedules, submit requests off, and submit availability</p>
+<br />
+<p>Source code can be found <a href="https://github.com/cperceful/WebScheduler">here</a></p>
