Added login info for test acounts to home page

--- a/WebScheduler/Views/Home/Index.cshtml
+++ b/WebScheduler/Views/Home/Index.cshtml
@@ -4,5 +4,12 @@
 
 <h4>To test admin/manager functionality: login with email: admin@admin.com, password: Schedule123!</h4>
 <br />
-<h4>To test staff functionality, register an account/log in</h4>
+<h4>To test staff functionality, log in to one of the following accounts: <br />
+        <ul>
+            <li>test1@test.com</li>
+            <li>test2@test.com</li>
+            <li>test3@test.com</li>
+        </ul>
+    Password for all three accounts is "testing"
+</h4>
 
